--- a/index.html
+++ b/index.html
@@ -110,12 +110,18 @@
 
       <h3 id="contact-id"> Contact </h3>  
       <a id="jump4"></a>
+      <p id="love"> I'd love to talk about tech, or just chat about life over ice cream! I'm partial to mango and strawberry. </p>
+      <!-- <img id="icecream"src=https://image.flaticon.com/icons/png/512/3198/3198662.png> -->
       <div class ="contact" >
           <a href="https://www.linkedin.com/in/sarah-grace-acobera/"><img id="linkedin" src="https://image.flaticon.com/icons/png/512/174/174857.png"></a>
           <a href="https://github.com/sacobera"> <img id="github" src="https://image.flaticon.com/icons/png/512/3291/3291695.png"></a>
           <a href="mailto:sarah.acobera@gmail.com"> <img id="gmail" src="https://image.flaticon.com/icons/png/512/888/888853.png"></a>
       </div>
 </section>
+
+<footer>
+    <p> @2021 Sarah Acobera. All Rights Reserved. </p>
+</footer>
     
     <script src="index.js"> </script>
 </body>
