one more commit

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         <a id="jump1"> </a>
         <h1 id="h1aboutme"> About Me</h1>
        <p id="idaboutme"> I'm a current DevMountain student and I enjoy learning new coding languages and skills! <br>
-           In my free time you will see me at the beach reading a book, or watching anime at home. <br>
+           In my free time you will see me at the beach reading a book, or watching puppy videos. <br>
            I also love trying out new recipes in my kitchen. Based in Oahu, Hawaii. 
        </p>
     </div>
 
-    <img class="sarah-img" src="images/sarah1.jpeg">
+    <img class="sarah-img" src="images/srh.png">
    </section>
 
    <section class="skill-section">
@@ -56,11 +56,11 @@
         <h1 id="skills"> Skills </h1>
         <div class ="logo">
         <img class= "html-img" src="https://image.flaticon.com/icons/png/128/1216/1216733.png">
-        <img class="css-img"src="https://image.flaticon.com/icons/png/128/732/732190.png">
+        <img class="css-img"src="https://image.flaticon.com/icons/png/128/732/732190.png"> 
         <img class ="js-img" src="https://image.flaticon.com/icons/png/128/541/541509.png">
         <img class ="node-img" src="https://image.flaticon.com/icons/png/128/919/919825.png">
         <img class= "express-img" src="images/express.png">
-        <img class="git-img" src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/141_Git_logo_logos-512.png">
+        <img class="git-img" src="images/git.png">
         </div>
     </div>
     
@@ -69,10 +69,10 @@
 
 <section class="project-section">\
     <a id="jump3"></a>
-        <h1 class="project"> Projects </h1>
+        <h1 class="project"> Project: Lo-Cal </h1>
         <div class="row">
             <div id="project-row">
-                <h3 id="proj-id">Lo-Cal</h3>
+                <h3 id="proj-id">Lo-Cal Homepage</h3>
                 <img id="homepage" src="images/homepage.png">
                 <p> Context: A DevMountain project with the goal of creating a simple app that has simple functions.  
                     <br>
@@ -81,24 +81,22 @@
                 </p>
             </div>
             <div id="project-row">
-                <h3 id="proj-id">Fastado</h3>
-                <img id="fastado" src="images/fastado.png">
+                <h3 id="proj-id">Loan Calculator</h3>
+                <img id="fastado" src="images/loan1.png">
                 <p>
-                    Context: A DevMountain Assessment with the goal of creating a food ordering app basing the design on data provided and created user persona documents.
                     <br>
                     <br>
-                    Description: A mock up website of a food ordering app created with Figma. 
+                    <br>
+
+                    This calculator takes a user's loan amount, interest rate, and months to pay to determine how much their monthly pay would be. 
                 </p>
             </div>
             <div id="project-row">
-                <h3 id="proj-id">Real Estate</h3>
-                <img id="interactive" src="images/interactive.png">
+                <h3 id="proj-id">Mortgage Calculator</h3>
+                <img id="interactive" src="images/mortcalc.png">
                 <p>
-                    Context: A DevMountain lab exercise with the goal of editing, deleting, and saving new information to the database.  
-                    The front end HTML CSS and Javascript has been provided prior to starting the lab.
-                    <br>
-                    <br>
-                    Description: An app that allows the user to add, edit and delete provided real estate houses. Back end server created with Javascript, Cors and Express.
+                   <br>
+                    The mortgage calculator is created with API from mlcalc.com that allows the user to play around with different factors that goes into paying for a mortgage to estimate their monthly pay rates and what they can afford. 
                 </p>
             </div>
             
